# gameOfLife

./: CMakeLists.txt  board.cpp  board.h  boardCamera.cpp  boardCamera.h  constants.h  main.cpp  pattern.h  random.h
